--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "cli": "node cli/index.js",
     "test": "playwright test ."
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "@playwright/test": "^1.37.1"
   },
   "dependencies": {
+    "commander": "^11.0.0",
     "fs-extra": "^11.1.1"
   }
 }
